# qemu-screenshot-mcp

./: .gitignore  README.md  kwin_info.txt  pyproject.toml  test_logic.py
.teams/: TEAM_001_edge_case_investigation.md  TEAM_001_qemu_screenshot.md  TEAM_002_run_and_screenshot.md
src/qemu_screenshot_mcp/: __init__.py  server.py
tests/: mock_qmp_server.py
